--- a/index02-Arg.html
+++ b/index02-Arg.html
@@ -27,10 +27,10 @@
 			<div class="btn2"></div>
 			<div class="btn3"></div>
 
-			<a href="./index01-Arg.html" class="atras"></a>
+			<a href="./index.html" class="atras"></a>
 			<a href="./index03-Arg.html" class="adelante"></a>
 
-			<a href="./index01-Arg.html" class="btn0"></a>
+			<a href="./index.html" class="btn0"></a>
 
 			<!-- Boton active -->
 			<div class="boton1" id="active1" style="display: none">
@@ -153,9 +153,9 @@
 								position: relative;
 								top: -7%;
 							">
-							<a href="./index01-Arg.html" class="atras"></a>
+							<a href="./index.html" class="atras"></a>
 							<a href="./index03-Arg.html" class="adelante"></a>
-							<a href="./index01-Arg.html" class="btn0"></a>
+							<a href="./index.html" class="btn0"></a>
 							<img
 								src="./images/Responsive/Recurso5.png"
 								alt=""
