--- a/index20-Arg.html
+++ b/index20-Arg.html
@@ -23,7 +23,7 @@
 			 </div>
 
 			<a href="./index19-Arg.html" class="atras"></a>
-			<a href="./index01-Arg.html" class="adelante"></a>
+			<a href="./index.html" class="adelante"></a>
 
 			<a href="./index02-Arg.html" class="btn1"></a>
 
@@ -112,7 +112,7 @@
 							style="height: auto; width: 100%" />
 
 						<a href="./index19-Arg.html" class="atras"></a>
-						<a href="./index01-Arg.html" class="adelante"></a>
+						<a href="./index.html" class="adelante"></a>
 
 						<a href="./index02-Arg.html" class="btn1"></a>
 
